fixed positioning of cards, icons not showing

--- a/styles/_socialcards.scss
+++ b/styles/_socialcards.scss
@@ -1,10 +1,14 @@
 //Layout of social cards at bottom of page;
 #social-card-container {
-  width: 80vw;
+  width: 100vw;
+  height: 40vh;
   position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-content: space-around;
+  font-size: $filler-fontsize;
+  text-align: center;
   .social-card {
     position: relative;
     border-radius: 10px;
@@ -14,12 +18,28 @@
       transition: 0.5s;
       .face1 {
           position: relative;
-          background: #333;
+          background: $fontcolor;
           display: flex;
           justify-content: center;
           align-items: center;
           z-index: 1;
           transform: translateY(100px);
+          .content {
+            opacity: 1;
+            transition: 0.5s;
+          }
+        .face2 {
+          position: relative;
+          background: #fff;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 20px;
+          box-sizing: border-box;
+          box-shadow: 0 20px 30px rgba(0, 0, 0, 0.8);
+          transform: translateY(-100px);
+        }
+        }
         }
       
       }
@@ -44,16 +64,15 @@
       }
     }
     .social-card:nth-child(1) .icon {
-      background: $blockcolor2;
+      background-color: $blockcolor2;
     }
     .social-card:nth-child(2) .icon {
-      background: $blockcolor3;
+      background-color: $blockcolor3;
     }
     .social-card:nth-child(3) .icon {
-      background: $blockcolor2;
+      background-color: $fontcolor;
     }
-  }
-
+//Styling on Font Awesome Icons
 
 i {
   position: absolute;
@@ -62,40 +81,19 @@ i {
   transform: translate(-50%, -50%);
   font-size: 80px;
   transition: 0.7s;
-  color: #fff;
+  color: black;
 }
 
 
 //Hover effects and transitions to show content of cards.
 
 #social-card-container .social-card:hover .face.face1 {
-  background: #ff0057;
+  background: #fff;
   transform: translateY(0px);
-}
-
-#social-card-container .social-card .face.face1 .content {
-  opacity: 1;
-  transition: 0.5s;
 }
 
 #social-card-container .social-card:hover .face.face1 .content {
   opacity: 1;
-}
-
-#social-card-container .social-card .face.face1 .content i {
-  max-width: 100px;
-}
-
-#social-card-container .social-card .face.face2 {
-  position: relative;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  box-sizing: border-box;
-  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
-  transform: translateY(-100px);
 }
 
 #social-card-container .social-card:hover .face.face2 {
@@ -106,19 +104,20 @@ i {
   margin: 0;
   padding: 0;
   text-align: center;
-  color: #414141;
+  color:$fontcolor;
 }
 
 #social-card-container .social-card .face.face2 .content h3 {
   margin: 0 0 10px 0;
   padding: 0;
-  color: #fff;
+  color: $subfontcolor;
   font-size: 24px;
   text-align: center;
-  color: #414141;
+  color: $fontcolor;
 }
 
 #social-card-container a {
   text-decoration: none;
-  color: #414141;
+  color: $fontcolor;
+  text-align: center;
 }
