--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -1,6 +1,7 @@
 $fontcolor: #0C120C;
 $subfontcolor: white;
 $title-fontsize: calc(60px + 5.28vw);
+$filler-fontsize: calc(0.5vw + 0.5vh + .5vmin);
 $boldfontweight: 500;
 $normalfontweight: 300; 
 $font-family: 'Montserrat', sans-serif;
