--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,11 +91,15 @@ section .sub-header h3 {
 }
 
 #social-card-container {
-  width: 80vw;
+  width: 100vw;
+  height: 40vh;
   position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-content: space-around;
+  font-size: calc(0.5vw + 0.5vh + .5vmin);
+  text-align: center;
 }
 #social-card-container .social-card {
   position: relative;
@@ -108,14 +112,30 @@ section .sub-header h3 {
 }
 #social-card-container .social-card .face .face1 {
   position: relative;
-  background: #333;
+  background: #0C120C;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1;
   transform: translateY(100px);
 }
-#social-card-container .icon {
+#social-card-container .social-card .face .face1 .content {
+  opacity: 1;
+  transition: 0.5s;
+}
+#social-card-container .social-card .face .face1 .face2 {
+  position: relative;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.8);
+  transform: translateY(-100px);
+}
+
+.icon {
   position: absolute;
   top: 0;
   left: 0;
@@ -125,7 +145,7 @@ section .sub-header h3 {
   transition: 0.7s;
   z-index: 1;
 }
-#social-card-container .icon .fab {
+.icon .fab {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -134,14 +154,17 @@ section .sub-header h3 {
   transition: 0.7s;
   color: #fff;
 }
-#social-card-container .social-card:nth-child(1) .icon {
-  background: #F72C25;
+
+.social-card:nth-child(1) .icon {
+  background-color: #F72C25;
 }
-#social-card-container .social-card:nth-child(2) .icon {
-  background: #0EB1D2;
+
+.social-card:nth-child(2) .icon {
+  background-color: #0EB1D2;
 }
-#social-card-container .social-card:nth-child(3) .icon {
-  background: #F72C25;
+
+.social-card:nth-child(3) .icon {
+  background-color: #0C120C;
 }
 
 i {
@@ -151,37 +174,16 @@ i {
   transform: translate(-50%, -50%);
   font-size: 80px;
   transition: 0.7s;
-  color: #fff;
+  color: black;
 }
 
 #social-card-container .social-card:hover .face.face1 {
-  background: #ff0057;
+  background: #fff;
   transform: translateY(0px);
-}
-
-#social-card-container .social-card .face.face1 .content {
-  opacity: 1;
-  transition: 0.5s;
 }
 
 #social-card-container .social-card:hover .face.face1 .content {
   opacity: 1;
-}
-
-#social-card-container .social-card .face.face1 .content i {
-  max-width: 100px;
-}
-
-#social-card-container .social-card .face.face2 {
-  position: relative;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  box-sizing: border-box;
-  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
-  transform: translateY(-100px);
 }
 
 #social-card-container .social-card:hover .face.face2 {
@@ -192,19 +194,20 @@ i {
   margin: 0;
   padding: 0;
   text-align: center;
-  color: #414141;
+  color: #0C120C;
 }
 
 #social-card-container .social-card .face.face2 .content h3 {
   margin: 0 0 10px 0;
   padding: 0;
-  color: #fff;
+  color: white;
   font-size: 24px;
   text-align: center;
-  color: #414141;
+  color: #0C120C;
 }
 
 #social-card-container a {
   text-decoration: none;
-  color: #414141;
+  color: #0C120C;
+  text-align: center;
 }
